fixed images not showing

--- a/src/assets/css/media-query.css
+++ b/src/assets/css/media-query.css
@@ -122,7 +122,7 @@
             left: 0;
             opacity: 0;
             width: 100%;
-            height: 260px;
+            height: 240px;
             object-fit: cover;
             object-position: top;
             transition: opacity 0.3s ease-in-out;
